--- a/arch/arm/configs/cyanogenmod_i9100_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9100_defconfig
@@ -1511,7 +1511,7 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_SUNKBD is not set
 # CONFIG_KEYBOARD_XTKBD is not set
 # CONFIG_SENSORS_HALL is not set
-# CONFIG_KEYBOARD_CYPRESS_TOUCH is not set
+CONFIG_KEYBOARD_CYPRESS_TOUCH=y
 CONFIG_KEYBOARD_CYPRESS_TOUCH_BLN=y
 CONFIG_TOUCHKEY_BLN=y
 # CONFIG_INPUT_MOUSE is not set
